expected/main/core/bitdata/bitdata19.err
ERROR: "actual/main/core/bitdata/bitdata19.lc", line 1
bitdata Zab/8 = Zab [ Xbad ]            -- invalid, size mismatch
                ^
Width of Zab is 4 more than expected

ERROR: Aborting after previously reported error

